maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:4: error: not found: value k
      k=random3()
      ^RandomMouseMaze:5: error: not found: value k
      if (k==0 && isFacingWall()==false){
          ^RandomMouseMaze:8: error: not found: value k
      else if (k==1){
               ^RandomMouseMaze:11: error: not found: value k
      else if (k==2){
               ^